Prepared for release 1.2.11

--- a/MarvalSoftware.Plugins.Teams.html
+++ b/MarvalSoftware.Plugins.Teams.html
@@ -364,8 +364,7 @@
                             });
 
                             var loginRequest = {
-                                scopes: ["https://graph.microsoft.com/.default"],
-                                redirectStartPage: "https://dev.marvalaustralia.com.au/MSM/"
+                                scopes: ["https://graph.microsoft.com/.default"]
                             };
 
                             try {
