Stopped disabling install button

--- a/MarvalSoftware.Plugins.Teams.html
+++ b/MarvalSoftware.Plugins.Teams.html
@@ -101,7 +101,7 @@
                         function createCustomer() {
                             var customernamecheck = $('#ctl00_ctl00_cph_maintenance_globalSettingsRepeater_ctl01_value').val();
 
-                            $('#installPlugin').prop('disabled', true);
+                            //$('#installPlugin').prop('disabled', true);
                             $('#errorText').text("");
                             if (customernamecheck === "" || customernamecheck === null) {
 
