--- a/MarvalSoftware.Plugins.Teams.html
+++ b/MarvalSoftware.Plugins.Teams.html
@@ -1,3 +1,4 @@
+
 <script type="text/javascript" src="Template.js"></script>
 <template>
     <style>
@@ -113,14 +114,18 @@
                          var url = "https://raw.githubusercontent.com/Marval-Australia/TeamsPlugin/refs/heads/main/manifest.json";
                          var githubPluginVersion = await (await fetch(url)).json();
                          var pagePluginVersion = $('#ctl00_ctl00_cph_maintenance_version').text();
-                         if (pagePluginVersion == githubPluginVersion) {
-                         $('#ctl00_ctl00_cph_maintenance_pluginDetailsFieldSet').before(`
-                             <div style="color:green !important;font-weight:bold">Plugin version check completed successfully<br><br>
+                         console.log("Two versions are %s and %s ", pagePluginVersion, githubPluginVersion.Version);
+                         if (pagePluginVersion == githubPluginVersion.Version) {
+                         $('#teamsHeader').before(`
+                             <div id="uptodatemessage" style="color:green !important;font-size:16px;font-weight:bold">Plugin is up to date!<br><br>
                          `);
+                         setTimeout(() => {
+                            $('#uptodatemessage').fadeOut(1000);
+                         }, 2000);
                          } else {
-                             $('#ctl00_ctl00_cph_maintenance_pluginDetailsFieldSet').before(`
+                             $('#teamsHeader').before(`
                    <br> <div>
-                    <span style="color:red !important;font-weight:bold" >Your plugin is not up to date, download the latest version <a href="https://github.com/Marval-Australia/TeamsPlugin/releases/latest/download/MarvalSoftware.Plugins.Teams.zip">here</a>
+                    <span style="color:red !important;font-weight:bold;font-size:16px" >Your plugin is not up to date, download the latest version <a href="https://github.com/Marval-Australia/TeamsPlugin/releases/latest/download/MarvalSoftware.Plugins.Teams.zip">here</a>
                     </div><br><br>
 
                     `);
@@ -220,13 +225,13 @@
     <div style="display:none;" id="additionalInstructions">
     <!-- <button type="button" style="cursor:pointer">Load Additional Instructions</button><br> <br> -->
     <span>
-        Now that you have initiated the installation, please follow the additional instructions in the chatbot documentation <a href="https://chatbot-uk.marval.cloud/chatbot-documentation/" target="_blank">here</a><br><br>
+        Now that you have initiated the installation, please follow the additional instructions in the chatbot documentation <a href="https://chatbot.marval.cloud/chatbot-documentation/" target="_blank">here</a><br><br>
         The following code will need to be placed into <b>Maintenance</b> | <b>Service</b> | <b>Self Service Customisation</b> under the AI Chatbot tab under the Private Key, Public Key and Code Snippet sections, respectively.<br>
 
         <a id="privatekeydownload" href="">Download Private Key</a><br>
         <a id="publickeydownload" href="">Download Public Key</a><br>
         <a id="chatbotsnippetdownload" href="">Download Self Service Code Snippet</a><br>
-    <!-- The Issuer for the chatbot, is https://chatbot-uk.marval.cloud/<br><br> -->
+    <!-- The Issuer for the chatbot, is https://chatbot.marval.cloud/<br><br> -->
      <span class="formSpan">
             <button style="cursor:pointer;" id="testplugin">Test Teams Integration</button><br><br>
             <button style="cursor:pointer;" id="generatepassword">Generate New Passowrd</button><br>
@@ -234,7 +239,6 @@
                 <pre id="formattedResponse"></pre>
             </div>
         </span>
-
     </div>
 
     <!--<a href="https://azure.microsoft.com/en-us/pricing/details/bot-services/">Azure Bot Pricing</href> -->
@@ -575,7 +579,8 @@
                     let fetchedChatbotHostOverride = await (await fetch(url)).text();
                    
                     
-                    $("#chatbot-iframe").attr("src", "https://" + fetchedChatbotHostOverride + "/chatbot-client?requestId=" + MarvalSoftware.UI.Controls.ScriptManager.getInstance().getPage()._requestId + "&aadObjectId=" + aadObjectId + "&tenantId=" + tenantID + "&contactName=" + contactName + "&agentName=" + $(".myServiceDesk").children("a").text());
+                  //  $("#chatbot-iframe").attr("src", "https://" + fetchedChatbotHostOverride + "/chatbot-client?requestId=" + MarvalSoftware.UI.Controls.ScriptManager.getInstance().getPage()._requestId + "&aadObjectId=" + aadObjectId + "&tenantId=" + tenantID + "&contactName=" + contactName + "&agentName=" + $(".myServiceDesk").children("a").text());
+                  $("#chatbot-iframe").attr("src", "https://" + fetchedChatbotHostOverride + "/chatbot-client?requestId=" + MarvalSoftware.UI.Controls.ScriptManager.getInstance().getPage()._requestId + "&aadObjectId=" + aadObjectId + "&tenantId=" + tenantID + "&contactName=" + contactName + "&agentName=" + $(".myServiceDesk").children("a").text());
 
                     $("*").find(".chatbot-container").hide().fadeIn(300, function () { })
 
