--- a/MarvalSoftware.Plugins.Teams.html
+++ b/MarvalSoftware.Plugins.Teams.html
@@ -234,7 +234,7 @@
     <!-- The Issuer for the chatbot, is https://chatbot.marval.cloud/<br><br> -->
      <span class="formSpan">
             <button style="cursor:pointer;" id="testplugin">Test Teams Integration</button><br><br>
-            <button style="cursor:pointer;" id="generatepassword">Generate New Passowrd</button><br>
+            <button style="cursor:pointer;" id="generatepassword">Generate New Password</button><br>
             <div id="responseContainer">
                 <pre id="formattedResponse"></pre>
             </div>
