--- a/MarvalSoftware.Plugins.Teams.html
+++ b/MarvalSoftware.Plugins.Teams.html
@@ -142,7 +142,7 @@
                           if (password.error) {
                             $('#generatepassword').after('<br><span style="color:red">' + password.error + '</span>');
                           } else {
-                            $('#generatepassword').after('<br><br><span style="color:blue">Generated password is ' + password.password + ' this password is encrypted and cannot be retireved after this page is reloaded.</span>');
+                            $('#generatepassword').after('<br><br><span style="color:blue">Generated password is ' + password.password + ' this password is encrypted and cannot be retrieved after this page is reloaded.</span>');
                           }
 
                        }
@@ -219,7 +219,7 @@
     <!-- <div id="itemsContainer"></div> -->
 <br>
     <span id="teamsPluginActivated" style="color:#073f5c"><br>You have not yet activated the Teams Integration<br>
-        <a href="https://chatbot.marval.cloud/chatbot-documentation/" target="_blank">Click here</a> if you require infromation on how to configure the Teams plugin.</span><br><br>
+        <a href="https://chatbot.marval.cloud/chatbot-documentation/" target="_blank">Click here</a> if you require information on how to configure the Teams plugin.</span><br><br>
 
     <button type="button" style="cursor:pointer" id="installPlugin">Activate Teams Integration</button><br>
     <div style="display:none;" id="additionalInstructions">
