Switched to prod url

--- a/MarvalSoftware.Plugins.Teams.html
+++ b/MarvalSoftware.Plugins.Teams.html
@@ -154,7 +154,7 @@
                              $('#settingslogin').after('<br><span style="color:red">Unable to login: ' + password.error + '</span><br>');
                            } else {
                              password = password.password;
-                             window.open("https://devchatbot.dj.id.au/chatbot-settings?pwd=" + password + "&tenantId=" + $('#ctl00_ctl00_cph_maintenance_globalSettingsRepeater_ctl03_value').val(), "_blank");
+                             window.open("https://chatbot.marval.cloud/chatbot-settings?pwd=" + password + "&tenantId=" + $('#ctl00_ctl00_cph_maintenance_globalSettingsRepeater_ctl03_value').val(), "_blank");
                            }
                          })
                        }
