Added error response for no matching GUID in MS response.

--- a/MarvalSoftware.Plugins.Teams.html
+++ b/MarvalSoftware.Plugins.Teams.html
@@ -569,6 +569,8 @@
                                             tenantId: tenantId
                                           }
                                         })
+                                      } else {
+                                        console.log("Could not match GUID")
                                       }
                                       Teams._injectChatbot(result.value[0].id);
                                     }
